LOCAL/directus/overlays/prod/react/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: test.local.slatsh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react
                port:
                  name: https
  tls:
    - hosts:
        - test.local.slatsh.com
      secretName: react-test-local-secret
